<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_settings_title_guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/base_margin_double" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_settings_guideline_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/base_margin_double" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/fragment_settings_content_guideline_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/settings_content_vertical_margin" />


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_settings_toolbar"
        style="@style/Widget.Sprinkle.Toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/settings_title" />

    <TextView
        android:id="@+id/fragment_settings_other_title"
        style="@style/Widget.Sprinkle.TextView.Medium"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/base_margin_double"
        android:text="@string/settings_other_section_title"
        android:textAppearance="@style/TextAppearance.Sprinkle.Settings.Title"
        app:layout_constraintEnd_toStartOf="@id/fragment_settings_guideline_end"
        app:layout_constraintStart_toEndOf="@id/fragment_settings_title_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/fragment_settings_toolbar" />

    <TextView
        android:id="@+id/fragment_settings_version_label"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/settings_content_horizontal_margin"
        android:text="@string/settings_version_label"
        android:textAppearance="@style/TextAppearance.Sprinkle.Body1"
        app:layout_constraintEnd_toStartOf="@id/fragment_settings_guideline_end"
        app:layout_constraintStart_toEndOf="@id/fragment_settings_content_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/fragment_settings_other_title" />

    <TextView
        android:id="@+id/fragment_settings_version"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.Sprinkle.Settings.Value"
        app:layout_constraintEnd_toStartOf="@id/fragment_settings_guideline_end"
        app:layout_constraintStart_toEndOf="@id/fragment_settings_content_guideline_start"
        app:layout_constraintTop_toBottomOf="@id/fragment_settings_version_label"
        tools:text="0.1" />

</androidx.constraintlayout.widget.ConstraintLayout>